
syntax = "proto3";

package product;

message Product_proto {
    int32 id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
}
